--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   },
   "devDependencies": {
     "bpk-component-button": "^6.2.9",
+    "bpk-component-calendar": "^13.1.1",
     "bpk-component-code": "^3.1.14",
     "bpk-component-text": "^6.2.0",
     "bpk-mixins": "^28.3.0",
     "bpk-stylesheets": "^7.2.13",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
